[FEAT] prettier setting

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,19 +1,18 @@
-
 ---
-import { CollectionEntry, getCollection } from "astro:content";
-import createSlug from "../../lib/createSlug"
+import { CollectionEntry, getCollection } from 'astro:content'
+import createSlug from '../../lib/createSlug'
 
 export async function getStaticPaths() {
-  const postEntries = await getCollection("blog");
+  const postEntries = await getCollection('blog')
   return postEntries.map((entry) => ({
     params: { slug: createSlug(entry.data.title, entry.slug) },
     props: { entry },
-  }));
+  }))
 }
 
-const { entry } = Astro.props;
-const post = entry.data;
-const { Content } = await entry.render();
+const { entry } = Astro.props
+const post = entry.data
+const { Content } = await entry.render()
 ---
 
 <Content />
