--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-import { Button } from '../components/ui/button'
-import BaseHead from '../components/BaseHead.astro'
+import { Button } from '@/components/ui/button'
+import BaseHead from '@/components/BaseHead.astro'
 import { SITE_DESCRIPTION, SITE_TITLE } from '../consts'
 import { getCollection } from 'astro:content'
 
