--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -3,7 +3,7 @@ import { CollectionEntry, getCollection } from 'astro:content'
 import createSlug from '../../lib/createSlug'
 
 export async function getStaticPaths() {
-  const postEntries = await getCollection('blog')
+  const postEntries = await getCollection('posts')
   return postEntries.map((entry) => ({
     params: { slug: createSlug(entry.data.title, entry.slug) },
     props: { entry },
@@ -11,7 +11,6 @@ export async function getStaticPaths() {
 }
 
 const { entry } = Astro.props
-const post = entry.data
 const { Content } = await entry.render()
 ---
 
