--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,26 +3,23 @@
 @tailwind utilities;
 
 :root {
-  --accent: #2337ff;
-  --accent-dark: #000d8a;
-  --black: 15, 18, 25;
-  --gray: 96, 115, 159;
+  --primary: #090b10;
+  --secondary: #0f111a;
+  --orange: #f48a6b;
+  --yellow: #fac76a;
+  --green: #b8db85;
   --gray-light: 229, 233, 240;
   --gray-dark: 34, 41, 57;
-  --gray-gradient: rgba(var(--gray-light), 50%), #fff;
-  --box-shadow: 0 2px 6px rgba(var(--gray), 25%),
-    0 8px 24px rgba(var(--gray), 33%), 0 16px 32px rgba(var(--gray), 33%);
 }
 
 body {
   margin: 0;
   padding: 0;
   text-align: left;
-  background: linear-gradient(var(--gray-gradient)) no-repeat;
-  background-size: 100% 600px;
+  background: var(--primary);
   word-wrap: break-word;
   overflow-wrap: break-word;
-  color: rgb(var(--gray-dark));
+  color: #fff;
   font-size: 20px;
   line-height: 1.7;
 }
@@ -39,7 +36,7 @@ h4,
 h5,
 h6 {
   margin: 0 0 0.5rem 0;
-  color: rgb(var(--black));
+  color: #fff;
   line-height: 1.2;
 }
 h1 {
