--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -1,43 +1,39 @@
 ---
 import { Button } from '@/components/ui/button'
-import BaseHead from '@/components/BaseHead.astro'
+
 import { SITE_DESCRIPTION, SITE_TITLE } from '../../consts'
 import { getCollection } from 'astro:content'
+import Layout from '@/layouts/Layout.astro'
 
-const posts = (await getCollection('blog')).sort(
+const posts = (await getCollection('posts')).sort(
   (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
 )
 ---
 
-<!doctype html>
-<html lang="ko">
-  <head>
-    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-  </head>
-  <body>
-    <main>
-      <section>
-        <ul>
-          {
-            posts.map((post) => (
-              <li>
-                <a href={`/posts/${post.slug}/`}>
-                  {/* <img width={720} height={360} src={post.data.heroImage} alt="" /> */}
-                  <h4 class="title">{post.data.title}</h4>
-                  {/* <p class="date">
+<Layout title={SITE_TITLE} description={SITE_DESCRIPTION}>
+  <main>
+    <section>
+      <ul>
+        {
+          posts.map((post) => (
+            <li>
+              <a href={`/posts/${post.slug}/`}>
+                {/* <img width={720} height={360} src={post.data.heroImage} alt="" /> */}
+                <h4 class="title">{post.data.title}</h4>
+                {/* <p class="date">
 										<FormattedDate date={post.data.pubDate} />
 									</p> */}
-                </a>
-              </li>
-            ))
-          }
-        </ul>
-        <Button>test</Button>
-      </section>
-    </main>
-    <!-- <Footer /> -->
-  </body>
-</html>
+              </a>
+            </li>
+          ))
+        }
+      </ul>
+      <Button>test</Button>
+    </section>
+  </main>
+</Layout>
+<!-- <Footer /> -->
+
 <style>
   main {
     width: 960px;
