--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import BaseHead from '@/components/BaseHead.astro'
-import Header from '@/components/Header.astro'
+import Header from '@/components/Header'
+// import Header from '@/components/Header.astro'
 
 let { title, description } = Astro.props
 ---
@@ -11,7 +12,7 @@ let { title, description } = Astro.props
     <BaseHead title={title} description={description} />
   </head>
   <body>
-    <Header />
+    <Header client:load />
     <slot />
   </body>
 </html>
