[FEAT] nanostores 진행중

--- a/src/components/Header_test_.astro
+++ b/src/components/Header_test_.astro
@@ -1,12 +1,13 @@
 ---
 import { NotebookPen, Github, Home, Inbox, Search, Settings, CircleUserRound } from 'lucide-react'
 import { useState } from 'react'
-
+import { getEntries } from 'astro:content'
 const [openNav, setOpenNav] = useState(false)
 ---
 
 <header>
   <!-- S : 헤더 좌측 -->
+  ?
   <div>
     <nav>
       <button
