--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import { getCollection } from 'astro:content'
 import styles from './styles.module.scss'
 
 const posts = (await getCollection('posts')).sort(
-  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
+  (a, b) => b.data.date.valueOf() - a.data.date.valueOf()
 )
 ---
 
