chore: header 반응형

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ import {
   CircleUserRound,
   FolderOpen,
 } from 'lucide-react'
-import '@/components/Header/styles.scss'
+import './styles.scss'
 import CategoryList from '@/components/Header/CategoryList'
 
 let { title, description } = Astro.props
