--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -41,7 +41,7 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0 0 0.5rem 0;
+  margin: 0;
   color: #fff;
   line-height: 1.2;
 }
@@ -71,7 +71,8 @@ a:hover {
   color: var(--accent);
 }
 p {
-  margin-bottom: 1em;
+  margin: 0;
+  padding: 0;
 }
 .prose p {
   margin-bottom: 2em;
