--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,27 +5,28 @@ import { SITE_DESCRIPTION, SITE_TITLE } from '../consts'
 import { getCollection } from 'astro:content'
 import { formatDate } from '@/lib/utils'
 
-import styles from './styles.module.scss'
-
 const posts = (await getCollection('posts')).sort(
   (a, b) => b.data.date.valueOf() - a.data.date.valueOf()
 )
 ---
 
 <Layout title={SITE_TITLE} description={SITE_DESCRIPTION}>
-  <main class={styles['main']}>
+  <main>
     <section>
-      <h2 class="a11y-hidden">RECENT POSTS</h2>
-      <ul class={styles['posts-wrap']}>
+      <h2 class="sr-only">RECENT POSTS</h2>
+      <ul class="flex flex-col gap-[60px]">
         {
           posts.map((post) => (
             <li>
-              <a href={`/posts/${post.slug}/`} class={styles['link']}>
+              <a
+                href={`/posts/${post.slug}/`}
+                class="block transition-all duration-300 ease-in-out hover:opacity-80"
+              >
                 {/* <img width={720} height={360} src={post.data.heroImage} alt="" /> */}
-                <p class={styles['date']}>{formatDate(post.data.date)}</p>
-                <div class={styles['title-wrap']}>
-                  <h3 class={styles['title']}>{post.data.title}</h3>
-                  <h4 class={styles['description']}>{post.data.description}</h4>
+                <p class="text-sm text-[#b2b2b2]">{formatDate(post.data.date)}</p>
+                <div class="flex flex-col gap-3 mt-2">
+                  <h3 class="text-[3rem] font-medium text-[#f2f2f2]">{post.data.title}</h3>
+                  <h4 class="text-[1.3rem] font-normal text-[#b2b2b2]">{post.data.description}</h4>
                 </div>
               </a>
             </li>
