--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,40 +1,61 @@
 ---
-import Layout from '@/layouts/Layout.astro'
-import { Button } from '@/components/ui/button'
-import { SITE_DESCRIPTION, SITE_TITLE } from '../consts'
+import BaseLayout from '../layouts/BaseLayout.astro'
+import HorizontalCard from '../components/HorizontalCard.astro'
 import { getCollection } from 'astro:content'
-import { formatDate } from '@/lib/utils'
+import createSlug from '../lib/createSlug'
 
-const posts = (await getCollection('posts')).sort(
-  (a, b) => b.data.date.valueOf() - a.data.date.valueOf()
+const posts = (await getCollection('blog')).sort(
+  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
 )
+
+const last_posts = posts.slice(0, 3)
+
+console.log('posts', posts)
 ---
 
-<Layout title={SITE_TITLE} description={SITE_DESCRIPTION}>
-  <main>
-    <section>
-      <h2 class="sr-only">RECENT POSTS</h2>
-      <ul class="flex flex-col gap-[60px]">
-        {
-          posts.map((post) => (
-            <li>
-              <a
-                href={`/posts/${post.slug}/`}
-                class="block transition-all duration-300 ease-in-out hover:opacity-80"
-              >
-                {/* <img width={720} height={360} src={post.data.heroImage} alt="" /> */}
-                <p class="text-sm text-[#b2b2b2]">{formatDate(post.data.date)}</p>
-                <div class="flex flex-col gap-3 mt-2">
-                  <h3 class="text-[3rem] font-medium text-[#f2f2f2]">{post.data.title}</h3>
-                  <h4 class="text-[1.3rem] font-normal text-[#b2b2b2]">{post.data.description}</h4>
-                </div>
-              </a>
-            </li>
-          ))
-        }
-      </ul>
-      <!-- <Button>test</Button> -->
-    </section>
-  </main>
-  <!-- <Footer /> -->
-</Layout>
+<BaseLayout sideBarActiveItemID="home">
+  <div class="pb-12 mt-5">
+    <div class="text-xl py-1">안녕하세요 👋</div>
+    <div class="text-5xl font-bold leading-[60px]">프론트엔드 개발자 <br />박민지 입니다.</div>
+
+    <div class="py-2">
+      <p class="text-lg">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, reiciendis?
+      </p>
+    </div>
+    <div class="mt-8">
+      <a class="btn bg-primary" href="https://github.com/ilacilac" target="_blank">Go to GitHub!</a>
+      <!-- <a
+        href="https://github.com/manuelernestog/astrofy"
+        target="_blank"
+        class="btn btn-outline ml-5"
+      >
+        Get This template
+      </a> -->
+    </div>
+  </div>
+
+  <div>
+    <div class="text-3xl w-full font-bold mb-5 mt-10 bg-">최신글</div>
+  </div>
+
+  {
+    last_posts.map((post) => {
+      const newSlug = createSlug(post.data.title, post.slug)
+
+      return (
+        <>
+          <HorizontalCard
+            title={post.data.title}
+            img={post.data.heroImage}
+            desc={post.data.description}
+            url={`/blog/${newSlug}`}
+            target="_self"
+            badge={post.data.badge}
+          />
+          <div class="divider my-0" />
+        </>
+      )
+    })
+  }
+</BaseLayout>
