--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -9,6 +9,7 @@ const { title, description, pubDate, updatedDate, heroImage, badge, tags = [] } 
 dayjs.extend(localizedFormat)
 const displayDate = dayjs(pubDate).format('ll')
 import { Image } from 'astro:assets'
+import Giscus from '@components/Giscus.astro'
 ---
 
 <BaseLayout
@@ -54,6 +55,7 @@ import { Image } from 'astro:assets'
       }
       <div class="divider my-2"></div>
       <slot />
+      <Giscus />
     </article>
   </main>
 </BaseLayout>
