fix: tsconfig 수정, 일부 스타일 변경

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,8 +1,8 @@
 ---
-import BaseHead from '../components/BaseHead.astro'
-import Header from '../components/Header.astro'
-import Footer from '../components/Footer.astro'
-import SideBar from '../components/SideBar.astro'
+import BaseHead from '@components/BaseHead.astro'
+import Header from '@components/Header.astro'
+import Footer from '@components/Footer.astro'
+import SideBar from '@components/SideBar.astro'
 import { ViewTransitions } from 'astro:transitions'
 
 import { SITE_TITLE, SITE_DESCRIPTION, TRANSITION_API } from '../config'
@@ -29,7 +29,7 @@ const {
       <div class="drawer-content bg-base-100">
         <Header title={SITE_TITLE} />
         <div class="md:flex md:justify-center">
-          <main class="p-6 pt-10 lg:max-w-[900px] max-w-[100vw]">
+          <main class="p-6 pt-10 lg:max-w-[900px] max-w-[100vw] w-full">
             <slot />
           </main>
         </div>
