--- a/src/components/SideBarMenu.astro
+++ b/src/components/SideBarMenu.astro
@@ -69,99 +69,100 @@ allBlogPosts.forEach((post) => {
           ></path>
         </svg>POSTS</summary
       >
-      <ul>
-        {
-          rootPosts.map((post) => (
-            <li
-              class={`${currentPath === `/blog/${createSlug(post.data.title, post.slug)}` ? activeClass : ''}`}
-            >
-              <a href={`/blog/${createSlug(post.data.title, post.slug)}`}>
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
-                  stroke="currentColor"
-                  class="h-4 w-4"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m2.25 0H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z"
-                  />
-                </svg>
-                {post.data.title}
-              </a>
-            </li>
-          ))
-        }
-        {
-          Object.entries(folders).map(([folderName, posts]) => {
-            const decodedCurrentPath = decodeURIComponent(currentPath)
-            // folder 자체가 active인지 체크
-            const isFolderActive = posts.some(
-              (post) => decodedCurrentPath === `/blog/${createSlug(post.data.title, post.slug)}`
-            )
-
-            return (
-              <li>
-                <details open>
-                  <summary class={`${isFolderActive ? activeClass : ''}`}>
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      fill="none"
-                      viewBox="0 0 24 24"
-                      stroke-width="1.5"
-                      stroke="currentColor"
-                      class="h-4 w-4"
-                    >
-                      <path
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        d="M2.25 12.75V12A2.25 2.25 0 014.5 9.75h15A2.25 2.25 0 0121.75 12v.75m-8.69-6.44l-2.12-2.12a1.5 1.5 0 00-1.061-.44H4.5A2.25 2.25 0 002.25 6v12a2.25 2.25 0 002.25 2.25h15A2.25 2.25 0 0021.75 18V9a2.25 2.25 0 00-2.25-2.25h-5.379a1.5 1.5 0 01-1.06-.44z"
-                      />
-                    </svg>
-                    {folderName}
-                  </summary>
-
-                  <ul>
-                    {posts.map((post) => {
-                      const decodedCurrentPath = decodeURIComponent(currentPath)
-                      const slugPath = `/blog/${createSlug(post.data.title, post.slug)}`
-                      const isActive = decodedCurrentPath === slugPath
-                      return (
-                        <li class={`${isActive ? activeClass : ''}`}>
-                          <a href={slugPath}>
-                            <svg
-                              xmlns="http://www.w3.org/2000/svg"
-                              fill="none"
-                              viewBox="0 0 24 24"
-                              stroke-width="1.5"
-                              stroke="currentColor"
-                              class="h-4 w-4"
-                            >
-                              <path
-                                stroke-linecap="round"
-                                stroke-linejoin="round"
-                                d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m2.25 0H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z"
-                              />
-                            </svg>
-                            {post.data.title}
-                          </a>
-                        </li>
-                      )
-                    })}
-                  </ul>
-                </details>
+      {
+        rootPosts && (
+          <ul class="mt-1">
+            {rootPosts.map((post) => (
+              <li
+                class={`${currentPath === `/blog/${createSlug(post.data.title, post.slug)}` ? activeClass : ''}`}
+              >
+                <a href={`/blog/${createSlug(post.data.title, post.slug)}`}>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="h-4 w-4"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m2.25 0H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z"
+                    />
+                  </svg>
+                  {post.data.title}
+                </a>
               </li>
-            )
-          })
-        }
-      </ul>
+            ))}
+            {Object.entries(folders).map(([folderName, posts]) => {
+              const decodedCurrentPath = decodeURIComponent(currentPath)
+              // folder 자체가 active인지 체크
+              const isFolderActive = posts.some(
+                (post) => decodedCurrentPath === `/blog/${createSlug(post.data.title, post.slug)}`
+              )
+
+              return (
+                <li>
+                  <details open>
+                    <summary class={`${isFolderActive ? activeClass : ''}`}>
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        fill="none"
+                        viewBox="0 0 24 24"
+                        stroke-width="1.5"
+                        stroke="currentColor"
+                        class="h-4 w-4"
+                      >
+                        <path
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          d="M2.25 12.75V12A2.25 2.25 0 014.5 9.75h15A2.25 2.25 0 0121.75 12v.75m-8.69-6.44l-2.12-2.12a1.5 1.5 0 00-1.061-.44H4.5A2.25 2.25 0 002.25 6v12a2.25 2.25 0 002.25 2.25h15A2.25 2.25 0 0021.75 18V9a2.25 2.25 0 00-2.25-2.25h-5.379a1.5 1.5 0 01-1.06-.44z"
+                        />
+                      </svg>
+                      {folderName}
+                    </summary>
+
+                    <ul>
+                      {posts.map((post) => {
+                        const decodedCurrentPath = decodeURIComponent(currentPath)
+                        const slugPath = `/blog/${createSlug(post.data.title, post.slug)}`
+                        const isActive = decodedCurrentPath === slugPath
+                        return (
+                          <li class={`${isActive ? activeClass : ''} mt-1`}>
+                            <a href={slugPath}>
+                              <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                fill="none"
+                                viewBox="0 0 24 24"
+                                stroke-width="1.5"
+                                stroke="currentColor"
+                                class="h-4 w-4"
+                              >
+                                <path
+                                  stroke-linecap="round"
+                                  stroke-linejoin="round"
+                                  d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m2.25 0H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z"
+                                />
+                              </svg>
+                              {post.data.title}
+                            </a>
+                          </li>
+                        )
+                      })}
+                    </ul>
+                  </details>
+                </li>
+              )
+            })}
+          </ul>
+        )
+      }
     </details>
   </li>
-  <li>
-    <a>
+  <!-- S: 이력서
+  <li class={`${sideBarActiveItemID === 'resume' ? activeClass : ''}`}>
+    <a href="/resume">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
@@ -179,6 +180,8 @@ allBlogPosts.forEach((post) => {
       resume.pdf
     </a>
   </li>
+   E: 이력서
+  -->
   <li>
     <a href="https://github.com/ilacilac" target="_blank">
       <Github class="h-4 w-4" />
