--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -1,25 +1,25 @@
 ---
-import BaseLayout from "../../layouts/BaseLayout.astro";
-import HorizontalCard from "../../components/HorizontalCard.astro";
-import { getCollection } from "astro:content";
-import createSlug from "../../lib/createSlug"
-import type { CollectionEntry } from "astro:content";
+import BaseLayout from '@layouts/BaseLayout.astro'
+import HorizontalCard from '@components/HorizontalCard.astro'
+import { getCollection } from 'astro:content'
+import createSlug from '../../lib/createSlug'
+import type { CollectionEntry } from 'astro:content'
 
 interface PageType {
-  data: CollectionEntry<"blog">[];
+  data: CollectionEntry<'blog'>[]
   url: {
-    prev?: string;
-    next?: string;
-  };
+    prev?: string
+    next?: string
+  }
 }
 
 export async function getStaticPaths({ paginate }) {
-  const posts = await getCollection("blog");
-  posts.sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
-  return paginate(posts, { pageSize: 10 });
+  const posts = await getCollection('blog')
+  posts.sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
+  return paginate(posts, { pageSize: 10 })
 }
 
-const { page } = Astro.props as { page: PageType };
+const { page } = Astro.props as { page: PageType }
 ---
 
 <BaseLayout title="Blog" sideBarActiveItemID="blog">
@@ -40,7 +40,7 @@ const { page } = Astro.props as { page: PageType };
               title={post.data.title}
               img={post.data.heroImage}
               desc={post.data.description}
-              url={"/blog/" + createSlug(post.data.title, post.slug)}
+              url={'/blog/' + createSlug(post.data.title, post.slug)}
               target="_self"
               badge={post.data.badge}
               tags={post.data.tags}
@@ -56,7 +56,7 @@ const { page } = Astro.props as { page: PageType };
     {
       page.url.prev ? (
         <a href={page.url.prev} class="btn btn-ghost my-10 mx-5">
-          {" "}
+          {' '}
           <svg
             class="h-6 w-6 fill-current md:h-8 md:w-8"
             xmlns="http://www.w3.org/2000/svg"
@@ -65,7 +65,7 @@ const { page } = Astro.props as { page: PageType };
             viewBox="0 0 24 24"
           >
             <path d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z" />
-          </svg>{" "}
+          </svg>{' '}
           Recent posts
         </a>
       ) : (
@@ -75,7 +75,7 @@ const { page } = Astro.props as { page: PageType };
     {
       page.url.next ? (
         <a href={page.url.next} class="btn btn-ghost my-10 mx-5">
-          Older Posts{" "}
+          Older Posts{' '}
           <svg
             class="h-6 w-6 fill-current md:h-8 md:w-8"
             xmlns="http://www.w3.org/2000/svg"
@@ -83,7 +83,7 @@ const { page } = Astro.props as { page: PageType };
             height="24"
             viewBox="0 0 24 24"
           >
-            {" "}
+            {' '}
             <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" />
           </svg>
         </a>
