--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,7 +1,7 @@
 ---
 import { getCollection, type CollectionEntry } from 'astro:content'
 
-import PostLayout from '../../layouts/PostLayout.astro'
+import PostLayout from '@layouts/PostLayout.astro'
 import createSlug from '../../lib/createSlug'
 import type { BlogSchema } from 'src/content/config'
 
