--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -5,7 +5,7 @@ const { sideBarActiveItemID } = Astro.props
 
 <div class="drawer-side z-40">
   <label for="my-drawer" class="drawer-overlay"></label>
-  <aside class="px-2 pt-2 h-auto min-h-full w-[19rem] bg-base-200 text-base-content flex flex-col">
+  <aside class="px-2 pt-2 fixed top-16 left-0 h-[calc(100vh-4rem)] w-[19rem] bg-base-200 text-base-content flex flex-col overflow-y-auto lg:fixed lg:top-16 lg:h-[calc(100vh-4rem)]">
     <!-- <div class="w-fit mx-auto mt-5 mb-6">
       <a href="/">
         <div class="avatar transition ease-in-out hover:scale-[102%] block m-auto">
